change model and dto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 server.port=8080
 
+#Datasource
 spring.datasource.url = jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
 spring.datasource.password=solovey
 spring.jpa.generate-ddl=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+#Application config
+#quartz.config.string=0 0 12 * * ? *
+days.for.return=14
