--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,12 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
 #Application config
-#quartz.config.string=0 0 12 * * ? *
 days.for.return=14
+
+#Mail
+spring.mail.host=smtp.yandex.ru
+spring.mail.port=465
+spring.mail.username=user
+spring.mail.password=user
+spring.mail.protocol=smtps
+mail.debug=true
