--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,13 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
 #Application config
-days.for.return=14
+quartz.config.string = 0 0 10 * * *
+days.for.return = 14
 
 #Mail
-spring.mail.host=smtp.yandex.ru
-spring.mail.port=465
-spring.mail.username=user
-spring.mail.password=user
-spring.mail.protocol=smtps
-mail.debug=true
+spring.mail.host = smtp.yandex.ru
+spring.mail.port = 465
+spring.mail.username = user
+spring.mail.password = user
+spring.mail.protocol = smtps
+mail.debug = true
