--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,12 @@ server.port=8080
 spring.datasource.url = jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
 spring.datasource.password=solovey
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
+
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+
+
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
