Added logging to the controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #Application config
 quartz.config.string = 0 0 10 * * *
 days.for.return = 14
+logging.level.org.springframework.web=info
 
 #Mail
 spring.mail.host = smtp.yandex.ru
